# lexoblag

./: .editorconfig  .gitignore  .gitmodules  .lektorproject  .pre-commit-config.yaml  .prettierrc.yml  404.md  Gemfile  README.md  _config.yml  archive.html  archive2.html  archive_all.html  archive_all.md  archive_projects.html  blog.md  index.md  lexoblag.gemspec  pyproject.toml
_data/: cats.yml  collections.yml  tags.yml  tech.yml
_includes/: article_pagination.html  article_pagination_arrow.html  article_title.html  breadcrumb_item.html  breadcrumbs.html  footer.html  header.html  nicename.html  nicename_desc.html  nicename_title.html  pagination.html  pagination_item.html  tag.html  tags.html  tech.html  title.html
_layouts/: archive.html  archive_autopages.html  archive_cats.html  archive_tags.html  base.html  cv.html  error.html  full_archive.html  home.html  post.html  project.html
_plugins/: _code_mangler.rb  _my_filters.rb
_posts/: 2019-01-01-one.md  2019-01-02-two.md  2019-01-03-three.md  2019-01-04-five.md  2019-01-05-four.md  2019-01-06-six.md  2019-01-07-seven.md  2019-08-10-welcome-to-jekyll.markdown
_projects/: applejack.md  lexical-basic.md  random-encounter.md  serverchecker-2012.md  sourcebans-lua.md  wulf-2012.md
assets/: robots.txt
configs/: scss.ini
databags/: footer.ini  links.ini  tech.ini
models/: blog-post.ini  blog.ini  error.ini  page.ini  project.ini  projects.ini  statii.ini
templates/: archive.html  archive_autopages.html  article.html  base.html  blog-post.html  blog.html  cv.html  error.html  full_archive.html  home.html  (+7 more)
(+48 files in other folders)
